--- a/DbgRunner/DbgRunner.csproj
+++ b/DbgRunner/DbgRunner.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\DbgLib\DbgLib.csproj" />
+    <ProjectReference Include="..\DominionDbgSample\DominionDbgSample.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
